--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ scsc/datas
 stst/datas
 package/datas
 paste_reproducibility
+splatpop/
+scsc/
+stst/
+ALL.chr22.phase3_shapeit2_mvncall_integrated_v5a.20130502.genotypes.vcf.gz
